@@ -2,6 +2,11 @@
     shutdown program.
   * man/svlogd.8: svlogd doesn't decrease the number of log files in a log
     directory; with n0 don't remove any log files.
+  * svlogd.c: properly prefix log messages written to standard error with
+    optional timestamp.
+  * runsvctrl.c, svwaitdown.c, svwaitup.c: supervise not running -> runsv
+    not running.
+  * package/README: 2005.
 
 runit 1.2.1
 Sat, 15 Jan 2005 11:57:46 +0000
